--- a/public/dcss-new-player-guide.html
+++ b/public/dcss-new-player-guide.html
@@ -8,7 +8,7 @@
 <a href=/curriculum-vitae.html>CV</a>
 <a href=/index.xml target=_blank class=hob>RSS</a></nav></header><main role=main><article itemtype=http://schema.org/Article><h1 itemtype=headline>Dungeon Crawl Stone Soup - New player guide</h1><p><cap>note</cap>, May 25, 2023 on <a href=https://mitjafelicijan.com>Mitja Felicijan's blog</a><div><p>An amazing game deserves an amazing guide. All this material can be find in some
 form on another on <a href=https://github.com/crawl/crawl>craw's</a> official repository.<ul><li><a href=/notes/dcss-quickstart.pdf>DCSS Quickstart</a> - Very short introduction to the
-game<li><a href=/notes/dcss_manual.pdf>DCSS Manual</a> - Extensive manual about the game</ul><figure><img src=/notes/dcss.jpg alt="Dungeon Crawl Stone Soup"></figure><p><strong>Movement and Exploration</strong><ul><li>You can move around with the numpad (try numlock on and off), vi-keys, or
+game<li><a href=/notes/dcss_manual.pdf>DCSS Manual</a> - Extensive manual about the game</ul><figure><img loading="lazy" src=/notes/dcss.jpg alt="Dungeon Crawl Stone Soup"></figure><p><strong>Movement and Exploration</strong><ul><li>You can move around with the numpad (try numlock on and off), vi-keys, or
 clicking with the mouse. Arrow keys work, though you can't move diagonally
 with them. Pressing Shift and a direction will move until you see/hit
 something.<li>Pressing <code>></code> will take you down a staircase, and <code>&lt;</code> to go up a staircase.<li>You can open doors by walking into them, and close them with <code>C</code>.<li>You can autoexplore by pressing <code>o</code>.<li>You can re-view recent messages with <code>Ctrl-p</code>.</ul><p><strong>Monsters and Combat</strong><ul><li>You can pick up items with <code>,</code> or <code>g</code>.<li>Wield weapons with <code>w</code>. Weapons have different stats.<ul><li>(You may also engage in Unarmed Combat, though it isn't very effective when
@@ -38,11 +38,11 @@ actions other than move and melee attack, and runs out very quickly if you
 aren't attacking. And after berserk ends, you are slowed down and can't
 berserk again for a short time.<li>In addition, the vast majority of abilities consume piety in the process.
 Regardless, this ability is very cheap, and the benefits are incredible, so
-don't hold back!<li>Pressing <code>^</code> will let you view your current god, abilities, and piety.</ul></div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/solaris/ZFSWhyNotDirectoryToFilesystem target=_blank rel=noopener>One reason that ZFS can't turn a directory into a filesystem</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>One of the wishes that I and other people frequently have for ZFS
-is the ability to take an existing directory (and everything
-underneath it) in a ZFS filesystem and turn it into a sub-filesystem
-of its own. One reason for wanting this is that a number of things
-are set and controlled on a per-filesyst…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
+don't hold back!<li>Pressing <code>^</code> will let you view your current god, abilities, and piety.</ul></div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
+a lock on a Linux NFS server, which turned
+out to be specific to NFS v3 (which I really should have seen coming,
+since it involved NLM and lockd). Finding the NFS v4 client that
+owns a lock is, depending on your perspective, either simpl…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
 and Bradley Kuhn, are interacting on the OSI's license-discuss
 list where the're doing
 bad computer history and insisting that a guy Larry Rosen
