--- a/public/debian-based-riced-up-distribution-for-developers-and-devops-folks.html
+++ b/public/debian-based-riced-up-distribution-for-developers-and-devops-folks.html
@@ -47,15 +47,15 @@ than others... For more information, read this article
 wanted this to include a set of pre-installed tools and services that are being
 used all the time by a modern developer. Theming is just a tiny part of it.
 Fonts being applied across the distro and things like that.<p>First, I choose terminal installer and left it to load additional components.
-Avoid using graphical installer in this case.<figure><img src=/posts/dfd-rice/install-00.png alt></figure><p>After that I selected hostname and created a normal user and set password for
-that user and root user and choose guided mode for disk partitioning.<figure><img src=/posts/dfd-rice/install-01.png alt></figure><p>I left it run to install all the things required for the base system and opted
+Avoid using graphical installer in this case.<figure><img loading="lazy" src=/posts/dfd-rice/install-00.png alt></figure><p>After that I selected hostname and created a normal user and set password for
+that user and root user and choose guided mode for disk partitioning.<figure><img loading="lazy" src=/posts/dfd-rice/install-01.png alt></figure><p>I left it run to install all the things required for the base system and opted
 out of scanning additional media for use by the package manager. Those will be
-downloaded from the internet during installation.<figure><img src=/posts/dfd-rice/install-02.png alt></figure><p>I opted out of the popularity contest, and <strong>now comes the important part</strong>.
+downloaded from the internet during installation.<figure><img loading="lazy" src=/posts/dfd-rice/install-02.png alt></figure><p>I opted out of the popularity contest, and <strong>now comes the important part</strong>.
 Uncheck all the boxes in Software selection and only leave 'standard system
 utilities'. I also left an SSH server, so I was able to log in to the machine
-from my main PC.<figure><img src=/posts/dfd-rice/install-03.png alt></figure><p>At this point, I installed GRUB bootloader on the disk where I installed the
-system.<figure><img src=/posts/dfd-rice/install-04.png alt></figure><p>That concluded the installation of base Debian and after restarting the computer
-I was prompted with the login screen.<figure><img src=/posts/dfd-rice/install-05.png alt></figure><p>Now that I had the base installation, it was time to choose what software do I
+from my main PC.<figure><img loading="lazy" src=/posts/dfd-rice/install-03.png alt></figure><p>At this point, I installed GRUB bootloader on the disk where I installed the
+system.<figure><img loading="lazy" src=/posts/dfd-rice/install-04.png alt></figure><p>That concluded the installation of base Debian and after restarting the computer
+I was prompted with the login screen.<figure><img loading="lazy" src=/posts/dfd-rice/install-05.png alt></figure><p>Now that I had the base installation, it was time to choose what software do I
 want to include in this so-called distribution. I wanted out of the box
 developer experience, so I had plenty to choose.<p>Let's not waste time and go through the list.<h2 id=desktop-environments>Desktop environments</h2><p>I have been using <a href=https://www.gnome.org/>Gnome</a> for my whole Linux life. From
 version 2 forward. It's been quite a ride. I hated version 3 when it came out
@@ -72,7 +72,7 @@ was the ideal time to give it a go. No guts, no glory kind of a thing.<p>One of 
 strange monitor with aspect ratio of 32:9. So relying on included layouts most
 of them have is a non-starter.<p>What I was doing in Gnome was having windows in a layout like the diagram
 below. This is my common practice. And if you look at it you can clearly see I
-was replicating tiling window manager setup in Gnome.<figure><img src=/posts/dfd-rice/layout.png alt></figure><p>That made me look into a bunch of tiling window managers and then tested them
+was replicating tiling window manager setup in Gnome.<figure><img loading="lazy" src=/posts/dfd-rice/layout.png alt></figure><p>That made me look into a bunch of tiling window managers and then tested them
 out. Candidates I was looking at were:<ul><li><a href=https://i3wm.org/>i3</a><li><a href=https://github.com/baskerville/bspwm>bspwm</a><li><a href=https://awesomewm.org/index.html>awesome</a><li><a href=https://xmonad.org/>XMonad</a><li><a href=https://swaywm.org/>sway</a><li><a href=http://www.qtile.org/>Qtile</a><li><a href=https://dwm.suckless.org/>dwm</a></ul><p>You can also check article <a href=https://www.tecmint.com/best-tiling-window-managers-for-linux/>13 Best Tiling Window Managers for
 Linux</a> I was
 referencing while testing them out.<p>While all of them provided what I needed, I liked i3 the most. What particular
@@ -86,7 +86,7 @@ essentials ohmybash docker rust).<pre tabindex=0 style=background-color:#fff><co
 </span></span></code></pre><p>Currently, most of these recipes use what Debian and this is totally fine with
 me since I never use bleeding edge features of a package. But if something major
 would come to light, I will replace it with a possible compilation script or
-something similar.<p>This is some of the output from the installation script.<figure><img src=/posts/dfd-rice/script.png alt></figure><p>Let's take a look at some examples in the installation script.<h3 id=docker-recipe>Docker recipe</h3><pre tabindex=0 style=background-color:#fff><code><span style=display:flex><span><span style=color:green># docker</span>
+something similar.<p>This is some of the output from the installation script.<figure><img loading="lazy" src=/posts/dfd-rice/script.png alt></figure><p>Let's take a look at some examples in the installation script.<h3 id=docker-recipe>Docker recipe</h3><pre tabindex=0 style=background-color:#fff><code><span style=display:flex><span><span style=color:green># docker</span>
 </span></span><span style=display:flex><span>print_header <span style=color:#a31515>&#34;Installing Docker&#34;</span>
 </span></span><span style=display:flex><span>curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --yes --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
 </span></span><span style=display:flex><span>echo <span style=color:#a31515>&#34;deb [arch=</span><span style=color:#00f>$(</span>dpkg --print-architecture<span style=color:#00f>)</span><span style=color:#a31515> signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian </span><span style=color:#00f>$(</span>lsb_release -cs<span style=color:#00f>)</span><span style=color:#a31515> stable&#34;</span> | tee /etc/apt/sources.list.d/docker.list &gt; /dev/null
@@ -120,11 +120,11 @@ update it because I need this in my life.<p>The current version boots in 4s to t
 desktop environment loads in 2s. So, its fast, very fast. And on clean boot, I
 measured ~230 MB of RAM usage.<p>And this is how it looks with two terminals side by side. I really like the
 simplicity and clean interface. I will polish the colors and stuff like that,
-but I really do like the results.<figure><img src=/posts/dfd-rice/desktop.png alt></figure></div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/solaris/ZFSWhyNotDirectoryToFilesystem target=_blank rel=noopener>One reason that ZFS can't turn a directory into a filesystem</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>One of the wishes that I and other people frequently have for ZFS
-is the ability to take an existing directory (and everything
-underneath it) in a ZFS filesystem and turn it into a sub-filesystem
-of its own. One reason for wanting this is that a number of things
-are set and controlled on a per-filesyst…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
+but I really do like the results.<figure><img loading="lazy" src=/posts/dfd-rice/desktop.png alt></figure></div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
+a lock on a Linux NFS server, which turned
+out to be specific to NFS v3 (which I really should have seen coming,
+since it involved NLM and lockd). Finding the NFS v4 client that
+owns a lock is, depending on your perspective, either simpl…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
 and Bradley Kuhn, are interacting on the OSI's license-discuss
 list where the're doing
 bad computer history and insisting that a guy Larry Rosen
