--- a/public/drawing-pixels-in-plan9.html
+++ b/public/drawing-pixels-in-plan9.html
@@ -11,7 +11,7 @@ alternative for drawing that draws a yellow square on a blue background.<p>More 
 contains all the drawing functions<li><a href=https://9fans.github.io/plan9port/man/man3/draw.html>draw man page</a>
 has a bit more digestable descriptions of the draw functions<li><a href=https://9fans.github.io/plan9port/man/man3/graphics.html>graphics man page</a>
 has a bit more digestable descriptions of the graphics functions<li><a href=https://9fans.github.io/plan9port/man/man3/>all man pages</a>
-can be a valuable resource for learning about the system</ul><figure><img src=/notes/plan9-pixels.png alt="Plan9 Howdy World!"></figure><pre tabindex=0 style=background-color:#fff><code><span style=display:flex><span><span style=color:green>// main.c
+can be a valuable resource for learning about the system</ul><figure><img loading="lazy" src=/notes/plan9-pixels.png alt="Plan9 Howdy World!"></figure><pre tabindex=0 style=background-color:#fff><code><span style=display:flex><span><span style=color:green>// main.c
 </span></span></span><span style=display:flex><span><span style=color:green></span><span style=color:#00f>#include</span> <span style=color:#00f>&lt;u.h&gt;</span><span style=color:#00f>
 </span></span></span><span style=display:flex><span><span style=color:#00f>#include</span> <span style=color:#00f>&lt;libc.h&gt;</span><span style=color:#00f>
 </span></span></span><span style=display:flex><span><span style=color:#00f>#include</span> <span style=color:#00f>&lt;draw.h&gt;</span><span style=color:#00f>
@@ -58,11 +58,11 @@ can be a valuable resource for learning about the system</ul><figure><img src=/n
 </span></span><span style=display:flex><span>	$CC $CFLAGS main.c
 </span></span><span style=display:flex><span>	$LD $LDFLAGS -o main main.$O
 </span></span></code></pre><p>And run with <code>./main</code>. To exit the program, press <code>Delete key</code> (strange but this
-is the alternative for Ctrl+C).<p><em>This is <strong>very cool</strong> indeed!</em></div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/solaris/ZFSWhyNotDirectoryToFilesystem target=_blank rel=noopener>One reason that ZFS can't turn a directory into a filesystem</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>One of the wishes that I and other people frequently have for ZFS
-is the ability to take an existing directory (and everything
-underneath it) in a ZFS filesystem and turn it into a sub-filesystem
-of its own. One reason for wanting this is that a number of things
-are set and controlled on a per-filesyst…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
+is the alternative for Ctrl+C).<p><em>This is <strong>very cool</strong> indeed!</em></div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
+a lock on a Linux NFS server, which turned
+out to be specific to NFS v3 (which I really should have seen coming,
+since it involved NLM and lockd). Finding the NFS v4 client that
+owns a lock is, depending on your perspective, either simpl…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
 and Bradley Kuhn, are interacting on the OSI's license-discuss
 list where the're doing
 bad computer history and insisting that a guy Larry Rosen
