--- a/public/replacing-dropbox-in-favor-of-digitalocean-spaces.html
+++ b/public/replacing-dropbox-in-favor-of-digitalocean-spaces.html
@@ -66,13 +66,13 @@ Gnome notification center. It is a straightforward solution. Nothing special
 going on.<blockquote><p>One obvious benefit of this is that I can omit syncing Node's <code>node_modules</code>
 or Python's <code>.venv</code> and <code>.git</code> folders.</blockquote><p>You can use this script in a combination with <a href=https://en.wikipedia.org/wiki/Cron>Cron</a>.<pre tabindex=0 style=background-color:#fff><code><span style=display:flex><span>0 2 * * * sh ~/Vault/bin/vault-backup.sh
 </span></span></code></pre><p>When you start syncing your local stuff with a remote server you can review your
-items on DigitalOcean.<figure><img src=/posts/dropbox-sync/dropbox-spaces.png alt="Dropbox Spaces"></figure><p>I have been using this script now for quite some time, and it's working
+items on DigitalOcean.<figure><img loading="lazy" src=/posts/dropbox-sync/dropbox-spaces.png alt="Dropbox Spaces"></figure><p>I have been using this script now for quite some time, and it's working
 flawlessly. I also uninstalled Dropbox and stopped using it completely.<p>All I need to do is write a Bash script that does the reverse and downloads from
-remote server to local folder. This could be another post.</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/solaris/ZFSWhyNotDirectoryToFilesystem target=_blank rel=noopener>One reason that ZFS can't turn a directory into a filesystem</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>One of the wishes that I and other people frequently have for ZFS
-is the ability to take an existing directory (and everything
-underneath it) in a ZFS filesystem and turn it into a sub-filesystem
-of its own. One reason for wanting this is that a number of things
-are set and controlled on a per-filesyst…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
+remote server to local folder. This could be another post.</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
+a lock on a Linux NFS server, which turned
+out to be specific to NFS v3 (which I really should have seen coming,
+since it involved NLM and lockd). Finding the NFS v4 client that
+owns a lock is, depending on your perspective, either simpl…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
 and Bradley Kuhn, are interacting on the OSI's license-discuss
 list where the're doing
 bad computer history and insisting that a guy Larry Rosen
