--- a/public/simple-world-clock-with-eiink-display-and-raspberry-pi-zero.html
+++ b/public/simple-world-clock-with-eiink-display-and-raspberry-pi-zero.html
@@ -15,7 +15,7 @@ project.<p>A while ago I bought a small eInk display <a href="https://shop.pimor
 pHAT</a> and I
 have a bunch of <a href=https://www.raspberrypi.org/products/raspberry-pi-zero/>Raspberry Pi's
 Zero</a> lying around that
-I really need to use.<figure><img src=/posts/world-clock/hardware.jpg alt="Inky pHAT, Raspberry Pi Zero"></figure><p>Since the Inky <a href="https://shop.pimoroni.com/products/inky-phat?variant=12549254217811">Inky
+I really need to use.<figure><img loading="lazy" src=/posts/world-clock/hardware.jpg alt="Inky pHAT, Raspberry Pi Zero"></figure><p>Since the Inky <a href="https://shop.pimoroni.com/products/inky-phat?variant=12549254217811">Inky
 pHAT</a> is
 essentially a HAT, it can easily be added on top of the <a href=https://www.raspberrypi.org/products/raspberry-pi-zero/>Raspberry Pi
 Zero</a>.<p>First, I installed the necessary software on Raspberry Pi with <code>pip3 install inky</code>.<p>And then I created a file <code>clock.py</code> in home directory <code>/home/pi</code>.<pre tabindex=0 style=background-color:#fff><code><span style=display:flex><span><span style=color:green>#!/usr/bin/env python</span>
@@ -62,15 +62,15 @@ Zero</a>.<p>First, I installed the necessary software on Raspberry Pi with <code
 </span></span><span style=display:flex><span>board.show()
 </span></span></code></pre><p>And because eInk displays are rather slow to refresh and the clock requires
 refreshing only once a minute, this can be done through cronjob.<p>Before we add this job to cron we need to make <code>clock.py</code> executable with <code>chmod +x clock.py</code>.<p>Then we add a cronjob with <code>crontab -e</code>.<pre><code>* * * * * /home/pi/clock.py
-</code></pre><p>So, we end up with a result like this.<figure><img src=/posts/world-clock/world-clock.jpg alt="World Clock"></figure><p>And for the enclosure that can be 3D printed, but I haven't yet something like
+</code></pre><p>So, we end up with a result like this.<figure><img loading="lazy" src=/posts/world-clock/world-clock.jpg alt="World Clock"></figure><p>And for the enclosure that can be 3D printed, but I haven't yet something like
 this can be used.</p><iframe id=vs_iframe src="https://www.viewstl.com/?embedded&url=https%3A%2F%2Fmitjafelicijan.com%2Fposts%2Fworld-clock%2Fenclosure.stl&color=gray&bgcolor=white&edges=no&orientation=front&noborder=no" style=border:0;margin:0;width:100%;height:400px></iframe><p>You can download my <a href=/posts/world-clock/enclosure.stl>STL file for the enclosure
 here</a>, but make sure that dimensions make
 sense and also opening for USB port should be added or just use a drill and some
-hot glue to make it stick in the enclosure.</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/solaris/ZFSWhyNotDirectoryToFilesystem target=_blank rel=noopener>One reason that ZFS can't turn a directory into a filesystem</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>One of the wishes that I and other people frequently have for ZFS
-is the ability to take an existing directory (and everything
-underneath it) in a ZFS filesystem and turn it into a sub-filesystem
-of its own. One reason for wanting this is that a number of things
-are set and controlled on a per-filesyst…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
+hot glue to make it stick in the enclosure.</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
+a lock on a Linux NFS server, which turned
+out to be specific to NFS v3 (which I really should have seen coming,
+since it involved NLM and lockd). Finding the NFS v4 client that
+owns a lock is, depending on your perspective, either simpl…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
 and Bradley Kuhn, are interacting on the OSI's license-discuss
 list where the're doing
 bad computer history and insisting that a guy Larry Rosen
