--- a/public/state-of-web-technologies-and-web-development-in-year-2022.html
+++ b/public/state-of-web-technologies-and-web-development-in-year-2022.html
@@ -37,7 +37,7 @@ this is beneficial. I am not a JavaScript purist. They all have their quirks,
 but at the end of the day, I truly believe it’s worth it.<h2 id=bundlers-and-transpilers>Bundlers and Transpilers</h2><p>I still reject calling <a href=https://www.typescriptlang.org/>Typescript</a> to
 <a href=https://www.javascript.com/>JavaScript</a> conversion a "compilation process". I
 call them <a href=https://devopedia.org/transpiler>transpilers</a>, and I don’t care! 😈<p>And if you want to fight this, take a look at this little chart and be mad at
-it!<figure><img src=/posts/state-of-web/compiling-vs-transpiling.png alt="Compiling vs Transpiling"></figure><p>The first one that I ever used was <a href=https://webpack.js.org/>webpack</a>, and it
+it!<figure><img loading="lazy" src=/posts/state-of-web/compiling-vs-transpiling.png alt="Compiling vs Transpiling"></figure><p>The first one that I ever used was <a href=https://webpack.js.org/>webpack</a>, and it
 was an absolute horrific experience. Saying this, it is an absolutely fantastic
 tool. I felt more like a config editor than actually a programmer. To be fair,
 I am a huge fan of <a href=https://www.gnu.org/software/make/>make</a>, and you can do as
@@ -125,7 +125,7 @@ so, a new one pops up, claiming that it has revolutionized UI development.
 Thousands of developers adopt it into their new projects, blog posts are
 written, Stack Overflow questions are asked and answered, and then a newer
 (and even more revolutionary) framework pops up to usurp the throne.
-— Ian Allen</blockquote><figure><img src=/posts/state-of-web/2008-vs-2020.png alt="To many options"></figure><p>And this jab at these libraries and cloud providers is not done out of malice.
+— Ian Allen</blockquote><figure><img loading="lazy" src=/posts/state-of-web/2008-vs-2020.png alt="To many options"></figure><p>And this jab at these libraries and cloud providers is not done out of malice.
 It is a real concern that I have about them. In my life, I have seen
 technologies come and go, but the basics always stick around. So surrendering
 all the power you have to a library or a cloud provider is in my opinion a
@@ -183,11 +183,11 @@ general spirit of the web. I will just use what I already know. Which worked 10
 years ago and will work 10 years after this. I will adopt a couple of little
 tools like Vite. But I will not waste my time on this anymore.<p>It was a good exercise to get in touch with what’s new now. Nothing really
 changed that much. FOMO is now cured! Now I have to get my ass back to actually
-code and make the project that I wanted to make in the first place.</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/solaris/ZFSWhyNotDirectoryToFilesystem target=_blank rel=noopener>One reason that ZFS can't turn a directory into a filesystem</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>One of the wishes that I and other people frequently have for ZFS
-is the ability to take an existing directory (and everything
-underneath it) in a ZFS filesystem and turn it into a sub-filesystem
-of its own. One reason for wanting this is that a number of things
-are set and controlled on a per-filesyst…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
+code and make the project that I wanted to make in the first place.</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
+a lock on a Linux NFS server, which turned
+out to be specific to NFS v3 (which I really should have seen coming,
+since it involved NLM and lockd). Finding the NFS v4 client that
+owns a lock is, depending on your perspective, either simpl…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
 and Bradley Kuhn, are interacting on the OSI's license-discuss
 list where the're doing
 bad computer history and insisting that a guy Larry Rosen
