--- a/public/tying-out-helix-code-editor.html
+++ b/public/tying-out-helix-code-editor.html
@@ -28,12 +28,12 @@ does really well is packing in sane defaults and even though because currently
 there is no plugin support I haven't found any need for them. It has all that
 you would need. It goes to extreme measures to show a user what is going on with
 popups that show you what the keyboard shortcuts are.<p>And it comes us packed with many
-<a href=https://github.com/helix-editor/helix/wiki/Themes>really good themes</a>.<figure><img src=/posts/helix-editor/editor.png alt=Editor></figure><p>It's still young but has this mature feeling to it. It has sane defaults and
-mimics Vim (works a bit differently, but the overall idea is similar).</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/solaris/ZFSWhyNotDirectoryToFilesystem target=_blank rel=noopener>One reason that ZFS can't turn a directory into a filesystem</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>One of the wishes that I and other people frequently have for ZFS
-is the ability to take an existing directory (and everything
-underneath it) in a ZFS filesystem and turn it into a sub-filesystem
-of its own. One reason for wanting this is that a number of things
-are set and controlled on a per-filesyst…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
+<a href=https://github.com/helix-editor/helix/wiki/Themes>really good themes</a>.<figure><img loading="lazy" src=/posts/helix-editor/editor.png alt=Editor></figure><p>It's still young but has this mature feeling to it. It has sane defaults and
+mimics Vim (works a bit differently, but the overall idea is similar).</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
+a lock on a Linux NFS server, which turned
+out to be specific to NFS v3 (which I really should have seen coming,
+since it involved NLM and lockd). Finding the NFS v4 client that
+owns a lock is, depending on your perspective, either simpl…<li><a href=http://www.landley.net/notes-2023.html#28-10-2023 target=_blank rel=noopener>October 28, 2023</a> — <a href=http://www.landley.net/notes-2023.html>Rob Landley's Blog Thing for 2023</a><div>Oh good grief, two of my least favorite licensing people, Larry Rosen
 and Bradley Kuhn, are interacting on the OSI's license-discuss
 list where the're doing
 bad computer history and insisting that a guy Larry Rosen
