Made a bunch of content fixes

--- a/public/who-knows-what-the-world-will-look-like-tomorrow.html
+++ b/public/who-knows-what-the-world-will-look-like-tomorrow.html
@@ -10,7 +10,7 @@
 in Flask and Bottle to moving on to static site generators. I have used and
 tested probably 10s of them my now. From homebrew solutions to the biggest and
 the baddest. From Bash scripts to Node.js disasters. I've seen some things, no
-doubt. Not all bad.<p>I'have been closely observing the web and where the trends are going, and I
+doubt. Not all bad.<p>I have been closely observing the web and where the trends are going, and I
 don't like what I see. Instead of internet being this weird place where
 experimentation is happening, it all became stale and formulized. Boring,
 actually. Really boring. And sad. Where is that old, revolutionary FU spirit I
@@ -19,7 +19,7 @@ mediocrity and formulaic boredom.<p>It almost feels like that the internet stopp
 something has started happening. With all the insanity around the world. People
 hating people without actual reasons, just because it's fashionable to hate and
 crowd is saying so. Sad state of affairs.<p>All this is contributing to this overall negativity masked as apathy. Everybody
-walking in lockstep. Instead of being creative are bold, we are just
+walking in lockstep. Instead of being creative and bold, we are just
 re-inventing the world and making the same mistakes. Maybe, just maybe, some
 things are good enough and there is no need to try to be too smart for our own
 good. After N-attempts, maybe something should click inside our heads to maybe
@@ -31,24 +31,25 @@ hearing or reading a thing on internet and let's fucking goooooo! Strong
 opinions are a sign of a weak and uneducated mind. I am more and more sure of
 this.<p>It's gotten to a point where you can with great certainty deduce a person's
 personality based on one or two opinions. How boring have we become. No wonder
-people can't talk to each other. These would be very quick conversations anyway.<p>I just got remembered of a song, "Hi Ren". The ending talks about being stiff
-and not being able to dance. Such an amazing metaphor. And we as people have
-gone so far, we can't even walk or even crawl normally anymore. We have
+people can't talk to each other. These would be very quick conversations anyway.<p>I just got remembered of a song, <a href="https://www.youtube.com/watch?v=s_nc1IVoMxc">"Hi
+Ren"</a>. The ending talks about being
+stiff and not being able to dance. Such an amazing metaphor. And we as people
+have gone so far, we can't even walk or even crawl normally anymore. We have
 forgotten that the most beautiful things in life have a great deal of
 uncertainty about them. We want instant gratification. Not only that, but we
 want absolute obedience. Complete control over others, because we have zero
 control of ourselves. And all the lies we could tell ourselves will not help us
-in this situation.<p>It is funny how I catch myself from time to time being a complete idiot. It's
+out of this situation.<p>It is funny how I catch myself from time to time being a complete idiot. It's
 like having an outer body experience. I can see myself being an idiot, and
 cannot stop myself. It serves as a learning lesson to stop before speaking. To
 think before saying. And to crawl before walking.<p>So there is still time. We can dance once more. All we need to do is stop for a
 second. Me and you. Us two is a start. Let's not try to change the world, but
-rather nudge ourselves just a tiny bit. And if we only did that. Each of us
-nudged ourselves a small, tiny bit, the world would heal. If we would just put
-down the phones and ignored Internet for a day or two. Put visiting websites
-that feed on us on hold. Listened to just one sentence and try to understand it
-from a person who we completely disagree with. I truly believe that this is
-possible.<p>Life is about suffering and joy. And instead of wishing suffering on others and
+rather nudge ourselves just a tiny bit. And if we only did that?! Just
+imagine. Each of us nudged ourselves a small, tiny bit, the world would heal. If
+we would just put down the phones and ignored Internet for a day or two. Put
+visiting websites that feed on us on hold. Listened to just one sentence and try
+to understand it from a person who we completely disagree with. I truly believe
+that this is possible.<p>Life is about suffering and joy. And instead of wishing suffering on others and
 excepting joy for yourselves, we should for a brief moment want suffering for
 ourselves and wish joy on others. Wouldn't that be an amazing sight to see?<p>I caught myself hating on Rust. And I deeply thought about it afterward. Why did
 I do it? It is obviously not for me. So why the hell was I being so negative
@@ -68,7 +69,7 @@ the world is trying to take from you, you are the only one who can say no. And
 create instead of destroy.<p>I don't have an ending for this post, so I will say this. We live in the most
 amazing times in the recorded history, and we should be internally grateful for
 it. Create and study, this should be my mantra. Just create and let the world
-happen. And you feel yourself to be too certain, stop and check how deep in the
+happen. And when you feel yourself to be too certain, stop and check how deep in the
 shit you are already. Strong opinions are a sign of a weak and uneducated
 mind. Hate and disdain is for the weak.</div></article></main><section><hr><h2>Posts from blogs I follow around the net</h2><ul><li><a href=https://utcc.utoronto.ca/~cks/space/blog/linux/NFSv4ServerLockClients target=_blank rel=noopener>Finding which NFSv4 client owns a lock on a Linux NFS(v4) server</a> — <a href=https://utcc.utoronto.ca/~cks/space/blog/>Chris's Wiki :: blog</a><div>A while back I wrote an entry about finding which NFS client owns
 a lock on a Linux NFS server, which turned
