--- a/public/crafting-stories-in-zed-editor.html
+++ b/public/crafting-stories-in-zed-editor.html
@@ -17,7 +17,7 @@ been using Helix exclusively.<p>I've been genuinely impressed by Zed. When you o
 detects its type and downloads the corresponding <a href=https://en.wikipedia.org/wiki/Language_Server_Protocol>LSP (language
 server)</a>. The list of
 supported languages is not extensive, but it's still impressive. It's a great
-example of how to create a product that stays out of your way.<figure><img loading="lazy" loading="lazy" loading="lazy" loading="lazy" src="/posts/zed/zed-1.png?style=bigimg" alt="Zed editor"><figcaption><p>C code on a light theme.</figcaption></figure><p>For C development it downloaded <a href=https://clangd.llvm.org/>clangd</a> and setting
+example of how to create a product that stays out of your way.<figure><img loading="lazy" loading="lazy" loading="lazy" loading="lazy" loading="lazy" src="/posts/zed/zed-1.png?style=bigimg" alt="Zed editor"><figcaption><p>C code on a light theme.</figcaption></figure><p>For C development it downloaded <a href=https://clangd.llvm.org/>clangd</a> and setting
 up missing dependencies in code was rather easy. For this project I use
 <a href=https://www.libsdl.org/>SDL2</a> for rendering terminal emulator. It’s a hobby
 project, don’t worry about it.<p>If you are going to give this a try and you are using C, I suggest checking two
@@ -32,7 +32,7 @@ for Linux yet, I will stick to Helix. This impressive piece of engineering is,
 above all, an amazing example of craftsmanship.<p>They have a bunch of amazing integrated functionalities like live desktop
 sharing, code sharing in a live coding session. There is a lot of pretentious
 marketing speak there but the product is still amazing!<p>For me the speed and the simplicity of the product was the most impressive
-thing. You get that: it just works feeling. A rare thing in 2023.<figure><img loading="lazy" loading="lazy" loading="lazy" loading="lazy" src="/posts/zed/zed-2.png?style=bigimg" alt="Zed editor"></figure><p>They also managed to add <a href=https://github.com/features/copilot>Github Copilot</a>
+thing. You get that: it just works feeling. A rare thing in 2023.<figure><img loading="lazy" loading="lazy" loading="lazy" loading="lazy" loading="lazy" src="/posts/zed/zed-2.png?style=bigimg" alt="Zed editor"></figure><p>They also managed to add <a href=https://github.com/features/copilot>Github Copilot</a>
 in a non obtrusive way. To me, everything feels very intentional and
 specifically selected. It's minimal yet maximally effective.<p><video src=https://zed.dev/img/post/copilot/copilot-demo.webm autoplay loop></video><p>It is a perfect balance between VS Code, Jetbrains IDE’s and something like VIM
 or Helix.<p>I just hope they <strong>DON’T</strong> add plugin support and keep it like it is. They as a
